# hayhooks

./: .editorconfig  .env.example  .gitignore  404.html  CONTRIBUTING_DOCS.md  Dockerfile  README.md  compose.yml  context7.json  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml  version.txt
.chainlit/: config.toml
.chainlit/translations/: bn.json  de-DE.json  el-GR.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  it.json  ja.json  kn.json  ko.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json  zh-TW.json
.github/workflows/: docker.yml  docs.yml  project.yml  pypi.yml  tests.yml
about/license/: index.html  index.md
advanced/advanced-configuration/: index.html  index.md
advanced/code-sharing/: index.html  index.md
advanced/custom-routes/: index.html
advanced/running-pipelines/: index.html  index.md
concepts/agent-deployment/: index.html  index.md
concepts/pipeline-deployment/: index.html  index.md
concepts/pipeline-wrapper/: index.html  index.md
concepts/yaml-pipeline-deployment/: index.html  index.md
dashboard/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.test.ts  api.ts  constants.ts  index.css  main.tsx  types.ts  vite-env.d.ts
dashboard/src/components/: EntrypointsSidebar.tsx  ErrorBlock.tsx  Header.tsx  SkeletonTraceCard.tsx  SpanRow.test.tsx  SpanRow.tsx  StatCard.tsx  Stats.tsx  TraceCard.test.tsx  TraceCard.tsx  (+5 more)
deploy/: service_with_confiigmap.yaml  service_with_deployment.yaml  simple_service.yaml
deploy/pipelines/: greetings.yml
deployment/deployment-guidelines/: index.html
deployment/deployment_guidelines/: index.html  index.md
docker/: Dockerfile  docker-bake.hcl
docs/: deployment_guidelines.md  index.md  tracing-dashboard-branch-review.md
docs/about/: license.md
docs/advanced/: advanced-configuration.md  code-sharing.md  custom-routes.md  durable-execution-operations.md  running-pipelines.md
docs/concepts/: agent-deployment.md  pipeline-deployment.md  pipeline-wrapper.md  yaml-pipeline-deployment.md
docs/deployment/: deployment-guidelines.md  deployment_guidelines.md
docs/examples/: async-operations.md  chat-with-website.md  openwebui-events.md  overview.md  rag-system.md
docs/features/: a2a-support.md  chainlit-integration.md  cli-commands.md  file-response-support.md  file-upload-support.md  mcp-support.md  openai-compatibility.md  openwebui-integration.md
docs/getting-started/: configuration.md  installation.md  quick-start-docker.md  quick-start.md
docs/guides/: development-best-practices.md  production-best-practices.md
docs/reference/: api-reference.md  environment-variables.md  logging.md  tracing.md
examples/: README.md  requirements.txt
examples/a2a_long_running/: README.md  compose.yaml
examples/a2a_multi_agent/: README.md  chat.py  client.py  requirements.txt  run_demo.py
examples/async-operations/: index.html  index.md
examples/chat-with-website/: index.html  index.md
examples/chat_with_website/: pipeline_wrapper.py
examples/chat_with_website_streaming/: pipeline_wrapper.py
examples/durable_chat_with_website/: README.md  compose.yaml
examples/durable_execution/: README.md  compose.yaml
examples/openwebui-events/: index.html  index.md
examples/overview/: index.html  index.md
examples/rag-system/: index.html  index.md
examples/rag_indexing_query/: README.md  docker-compose.yml  requirements.txt
examples/shared_code_between_wrappers/: README.md
features/a2a-support/: index.html  index.md
features/chainlit-integration/: index.html  index.md
features/cli-commands/: index.html  index.md
features/file-response-support/: index.html  index.md
features/file-upload-support/: index.html  index.md
features/mcp-support/: index.html  index.md
features/openai-compatibility/: index.html  index.md
features/openwebui-integration/: index.html  index.md
getting-started/configuration/: index.html  index.md
getting-started/installation/: index.html  index.md
getting-started/quick-start/: index.html  index.md
getting-started/quick-start-docker/: index.html  index.md
guides/development-best-practices/: index.html  index.md
guides/production-best-practices/: index.html  index.md
reference/api-reference/: index.html  index.md
reference/environment-variables/: index.html  index.md
reference/logging/: index.html  index.md
reference/tracing/: index.html  index.md
scripts/: demo_dashboard_traces.sh
search/: search_index.json
src/hayhooks/: __about__.py  __init__.py  __main__.py  a2a.py  callbacks.py  chainlit_events.py  colors.py  durable.py  durable_adapters.py  durable_runtime.py  events.py  execution.py  open_webui.py  redis_execution.py  settings.py
stylesheets/: extra.css
tests/: conftest.py  test_a2a.py  test_chainlit_integration.py  test_chainlit_utils.py  test_cli.py  test_cli_streaming.py  test_convert_component_output.py  test_cors.py  test_dashboard_mount.py  test_dashboard_traces.py  test_deploy_at_startup.py  test_deploy_files_at_startup.py  test_deploy_performance.py  test_deploy_utils.py  test_deploy_yaml.py  test_deploy_yaml_at_startup.py  test_durable_a2a_v3.py  test_durable_deployment_lifecycle_v3.py  test_durable_execution_core.py  test_durable_execution_v3.py  test_handle_callable_type.py  test_handle_unsupported_types.py  test_haystack_compat.py  test_hybrid_streaming_utils.py  test_include_outputs_from.py  test_it_a2a_server.py  test_it_concurrent_streaming.py  test_it_dashboard.py  test_it_deploy.py  test_it_deploy_files.py  test_it_deploy_yaml_route.py  test_it_draw.py  test_it_file_response.py  test_it_handling_deploy_exceptions.py  test_it_mcp_server.py  test_it_open_webui.py  test_it_openai.py  test_it_pipeline_utils.py  test_it_status.py  test_it_yaml_include_outputs_from.py  (+24 more)
tests/test_files/: broken_rag_pipeline.yml  chat_with_website.yaml  pipeline_qdrant.yml  test_pipeline.yml  test_pipeline_01.yml
tracing-dashboard-branch-review/: index.html
(+231 files in other folders)
